--- a/index.html
+++ b/index.html
@@ -1,87 +1,15 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-
+ <!DOCTYPE HTML>
+<html lang="zh-CN">
 <head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Grayscale - Start Bootstrap Theme</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-
-    <!-- Theme CSS -->
-    <link href="css/grayscale.min.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+	<title>dota2</title>
+	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/style.css">
 
 </head>
-
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    Menu <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Start</span> Bootstrap
-                </a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-                <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#download">Download</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-	    <header class="intro">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Grayscale</h1>
-                        <p class="intro-text">A free, responsive, one page Bootstrap theme.
-                            <br>Created by Start Bootstrap.</p>
-                        <a href="#about" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header> 
+<body>
 
 <nav class="navbar navbar-inverse">
 	<div class="container">
@@ -193,7 +121,7 @@
             	<img src="http://img.dota2.com.cn/maps/5d/7f/5d7f7697d349d47dfa5518fd11a49a621485159509.jpg"/>
             </div>
             <div class="item">
-            	<img src=""/>
+            	<img src="http://img.dota2.com.cn/maps/72/21/7221c15ae8830f3aa321a7af58e4ca201487935878.jpg"/>
             </div>
         </div>
         <a class="carousel-control left" href="#myCarousel" data-slide="prev"></a>
@@ -255,7 +183,7 @@
                                  <h3>DOTA2 2月9日更新日志：7.02游戏性</h3>
                                  <div class="d_contents">
                                  	<div class="d_item">
-                                    	<img src=""/>                                    </div>
+                                    	<img src="http://img.dota2.com.cn/dota2/1e/05/1e05ed210380742885e3e63bb4e9c5d11487936607.jpg"/>                                    </div>
                                     <div class="d_msg">
                                     	<p>2017基辅特级锦标赛马上就要来临，本次比赛仍会在全世界范围公开选拔喜爱DOTA2的玩家及战队。</p>
                                         <span class="d_data">2017-02-09</span>                                    </div>
@@ -345,7 +273,7 @@
                                  <h3>DOTA2 2月9日更新日志：7.02游戏性</h3>
                                  <div class="d_contents">
                                  	<div class="d_item">
-                                    	<img src=""/>                                    </div>
+                                    	<img src="http://img.dota2.com.cn/maps/72/21/7221c15ae8830f3aa321a7af58e4ca201487935878.jpg"/>                                    </div>
                                     <div class="d_msg">
                                     	<p>2017基辅特级锦标赛马上就要来临，本次比赛仍会在全世界范围公开选拔喜爱DOTA2的玩家及战队。</p>
                                         <span class="d_data">2017-02-09</span>                                    </div>
@@ -445,9 +373,9 @@
                 </div>
             </div>
             <div class="d_content">
-<video  controls="controls" autoplay="autoplay">
- <source src="images/video/countdown.mp4" type="video/mp4">
-您的浏览器不支持 video 标签。</video>
+				<video  controls="controls" autoplay="autoplay">
+				 <source src="images/video/countdown.mp4" type="video/mp4">
+				</video>
                 <div class="new-travel">
                 	<div class="version-box">
                     	<a href="#" class="version-newest">
@@ -903,20 +831,9 @@
     </div>
   </div> 
 </footer>   
-    <script src="vendor/jquery/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
-
-    <!-- Theme JavaScript -->
-    <script src="js/grayscale.min.js"></script>
-
+<script src="bootstrap/js/jquery.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="js/jquery-1.12.0.min.js"></script>
+<script src="js/dota2.js"></script>
 </body>
-
 </html>
