--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,14 +8,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>DOTA2</title>
-	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css">
+
+    <title>Grayscale - Start Bootstrap Theme</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+	<link href="css/style.css" rel="stylesheet">
+
 
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-
 <nav class="navbar navbar-inverse">
 	<div class="container">
             <div class="navbar-header navbar-heading page-scroll">
@@ -836,12 +840,16 @@
     </div>
   </div> 
 </footer>  
- <script src="vendor/jquery/jquery.js"></script>
+
+    <!-- jQuery -->
+    <script src="vendor/jquery/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
- <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<script src="js/jquery-1.12.0.min.js"></script>
-<script src="js/dota2.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+
+
+
 </body>
 
 </html>
