--- a/index.html
+++ b/index.html
@@ -847,7 +847,8 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-
+	<script src="js/jquery-1.12.0.min.js"></script>
+	<script src="js/dota2.js"></script>
 
 
 </body>
