--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@
                             <a class="d_list" href="#">
                             	<i class="d_icon  d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>                        </div>
+                                <span class="d_data">2017-01-27</span>                            </a>                        
+								</div>
                     </div>
 					<div class="tab-pane fade in active d_tab" id="Contest">
                     	<div class="d_lists">
@@ -282,7 +283,8 @@
                                  <h3>DOTA2 2月9日更新日志：7.02游戏性</h3>
                                  <div class="d_contents">
                                  	<div class="d_item">
-                                    	<img src="http://img.dota2.com.cn/maps/72/21/7221c15ae8830f3aa321a7af58e4ca201487935878.jpg"/>                                    </div>
+                                    	<img src="http://img.dota2.com.cn/maps/72/21/7221c15ae8830f3aa321a7af58e4ca201487935878.jpg"/>                                    
+										</div>
                                     <div class="d_msg">
                                     	<p>2017基辅特级锦标赛马上就要来临，本次比赛仍会在全世界范围公开选拔喜爱DOTA2的玩家及战队。</p>
                                         <span class="d_data">2017-02-09</span>                                    </div>
@@ -513,7 +515,7 @@
                     </div>
                 </div>
                 <div class="d_content d_poster">
-                    <div class="pictureSlider poster-main" data-setting='{"width":460,"height":230,"posterWidth":360,"posterHeight":360,"scale":0.8,"autoPlay":true,"delay":2000,"speed":300}'>
+                    <div class="pictureSlider poster-main" data-setting='{"width":440,"height":230,"posterWidth":360,"posterHeight":360,"scale":0.8,"autoPlay":true,"delay":2000,"speed":300}'>
                         <a class="poster_btn poster-prev"></a>
                         <ul class="poster-list">
                             <li class="poster-item ">
