--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>DOTA2demo</title>
 
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 
 
@@ -238,42 +237,51 @@
                                     	<img src="http://img.dota2.com.cn/dota2/4a/34/4a348628b67cc98ee32bd7ba728b83d71486621903.jpg"/>                                    </div>
                                     <div class="d_msg">
                                     	<p>DOTA2 2月9日更新日志：7.02游戏更新</p>
-                                        <span class="d_data">2017-02-09</span>                                    </div>
+                                        <span class="d_data">2017-02-09</span>                                    
+									</div>
                                  </div>
                             </a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>2017亚洲邀请赛非中国赛区分组对阵公布线</p>
-                                <span class="d_data ">2017-01-24</span>                            </a>
+                                <span class="d_data ">2017-01-24</span>                            
+							</a>
                              <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>2017亚洲邀请赛非中国赛区分组对阵公布</p>
-                                <span class="d_data">2017-01-24</span>                            </a>
+                                <span class="d_data">2017-01-24</span>                            
+							</a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>2017亚洲邀请赛非中国赛区分组对阵公布</p>
-                                <span class="d_data">2017-01-24</span>                            </a>
+                                <span class="d_data">2017-01-24</span>                            
+							</a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon  d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon  d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>                        
-								</div>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>                        
+						</div>
                     </div>
 					<div class="tab-pane fade in active d_tab" id="Contest">
                     	<div class="d_lists">
@@ -285,41 +293,51 @@
 										</div>
                                     <div class="d_msg">
                                     	<p>2017基辅特级锦标赛马上就要来临，本次比赛仍会在全世界范围公开选拔喜爱DOTA2的玩家及战队。</p>
-                                        <span class="d_data">2017-02-09</span>                                    </div>
+                                        <span class="d_data">2017-02-09</span>                                    
+									</div>
                                  </div>
                             </a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>2017亚洲邀请赛非中国赛区分组对阵公布线</p>
-                                <span class="d_data ">2017-01-24</span>                            </a>
+                                <span class="d_data ">2017-01-24</span>                            
+							</a>
                              <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>2017亚洲邀请赛非中国赛区分组对阵公布</p>
-                                <span class="d_data">2017-01-24</span>                            </a>
+                                <span class="d_data">2017-01-24</span>                            
+							</a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>2017亚洲邀请赛非中国赛区分组对阵公布</p>
-                                <span class="d_data">2017-01-24</span>                            </a>
+                                <span class="d_data">2017-01-24</span>                            
+							</a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon  d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon  d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>                        </div>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>                        
+						</div>
                     </div>
 					<div class="tab-pane fade in active d_tab" id="Update">
                     	<div class="d_lists">
@@ -330,41 +348,51 @@
                                     	<img src="http://img.dota2.com.cn/dota2/4a/34/4a348628b67cc98ee32bd7ba728b83d71486621903.jpg"/>                                    </div>
                                     <div class="d_msg">
                                     	<p>DOTA2 2月9日更新日志：7.02游戏更新</p>
-                                        <span class="d_data">2017-02-09</span>                                    </div>
+                                        <span class="d_data">2017-02-09</span>                                    
+									</div>
                                  </div>
                             </a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>2017亚洲邀请赛非中国赛区分组对阵公布线</p>
-                                <span class="d_data ">2017-01-24</span>                            </a>
+                                <span class="d_data ">2017-01-24</span>                            
+							</a>
                              <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>2017亚洲邀请赛非中国赛区分组对阵公布</p>
-                                <span class="d_data">2017-01-24</span>                            </a>
+                                <span class="d_data">2017-01-24</span>                            
+							</a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>2017亚洲邀请赛非中国赛区分组对阵公布</p>
-                                <span class="d_data">2017-01-24</span>                            </a>
+                                <span class="d_data">2017-01-24</span>                            
+							</a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon  d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon  d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>                        </div>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>                        
+						</div>
                     </div>          
                   </div>
                 </ul>
@@ -392,25 +420,35 @@
                             <h2 class="title title02">在出发</h2>
                         </a>
                         <div class="d_version version-pic1">
-                        	<img src="images/pic1.jpg">                        </div>
+                        	<img src="images/pic1.jpg">                        
+						</div>
                          <div class="d_version version-pic2">
-                        	<img src="images/pic2.jpg">                        </div>
+                        	<img src="images/pic2.jpg">                        
+						</div>
                         <div class="d_version version-pic3">
-                        	<img src="images/pic3.jpg">                        </div>
+                        	<img src="images/pic3.jpg">                       
+						</div>
                         <div class="d_version version-pic4">
-                        	<img src="images/pic4.jpg">                        </div>
+                        	<img src="images/pic4.jpg">                       
+						</div>
                          <div class="d_version version-pic5">
-                        	<img src="images/pic5.jpg">                        </div>
+                        	<img src="images/pic5.jpg">                        
+						</div>
                         <div class="d_version version-pic6">
-                        	<img src="images/pic6.jpg">                        </div>
+                        	<img src="images/pic6.jpg">                       							
+						</div>
                         <div class="d_version version-pic7">
-                        	<img src="images/pic7.jpg">                        </div>
+                        	<img src="images/pic7.jpg">                        
+						</div>
                          <div class="d_version version-pic8">
-                        	<img src="images/pic8.jpg">                        </div>
+                        	<img src="images/pic8.jpg">                       
+						</div>
                         <div class="d_version version-pic9">
-                        	<img src="images/pic9.jpg">                        </div>                        
+                        	<img src="images/pic9.jpg">                        
+						</div>                        
                         <div class="d_version version-pic10">
-                        	<img src="images/pic10.jpg">                        </div>                                                
+                        	<img src="images/pic10.jpg">                        
+						</div>                                                
                     </div>
                 </div>
             </div>
@@ -549,20 +587,20 @@
                     </div>
                 </div>
                 <div class="row">        
-               			 <ul class="d-list">
-                        		<div class="col-sm-5 col-xs-5 poster-item">
-                                    		<a href="#">
-                            						<img class="img-responsive" src="images/Duel.jpg">
-                                            		<span>Snipers Duel（狙击手决斗）</span>
-                                             </a>
-                           			</div>
-                        			<div class="col-sm-5 col-xs-5 poster-item">
-                                    		<a href="#">
-                            						<img class="img-responsive" src="images/LEVEL25.jpg">
-                                            		<span>LEVLE25</span>
-                                             </a>
-                           		 </div>
-                			</ul>
+               	    <ul class="d-list">
+						<div class="col-sm-5 col-xs-5 poster-item">
+							<a href="#">
+								<img class="img-responsive" src="images/Duel.jpg">
+								   <span>Snipers Duel（狙击手决斗）</span>
+							  </a>
+							</div>
+							<div class="col-sm-5 col-xs-5 poster-item">
+							  <a href="#">
+								<img class="img-responsive" src="images/LEVEL25.jpg">
+								 <span>LEVLE25</span>
+							   </a>
+						 </div>
+                	</ul>
                 </div>                
             </div>
     </div>
@@ -841,12 +879,8 @@
   </div> 
 </footer>  
 
-    <!-- jQuery -->
-    <script src="vendor/jquery/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
+    <script src="bootstrap/js/jquery.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
 	<script src="js/jquery-1.12.0.min.js"></script>
 	<script src="js/dota2.js"></script>
 
