--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>DOTA2demo</title>
-
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-
-
+	<!--[if lt IE 9]>
+      <script src="//cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="//cd	n.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -113,16 +112,16 @@
      </div>   
 </nav>
 <header>
-	<div id="myCarousel" class="carousel slide intro-header">
-    	<ol class="carousel-indicators">
-        	<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-         	<li data-target="#myCarousel" data-slide-to="1" class="active"></li>
-         	<li data-target="#myCarousel" data-slide-to="2" class="active"></li>           
-        </ol>
-        <div class="carousel-inner">
+	<div id="myCarousel" class="carousel slide">
+		<ol class="carousel-indicators">
+			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+			<li data-target="#myCarousel" data-slide-to="1"></li>
+			<li data-target="#myCarousel" data-slide-to="1"></li>
+		</ol>
+		   <div class="carousel-inner">
         	<div class="item active">
-<img src="http://img.dota2.com.cn/maps/7e/55/7e55796652cfe428b58ea962c58215da1484035239.jpg">            
-</div>
+					<img src="http://img.dota2.com.cn/maps/7e/55/7e55796652cfe428b58ea962c58215da1484035239.jpg">            
+			</div>
             <div class="item">
             	<img src="http://img.dota2.com.cn/maps/5d/7f/5d7f7697d349d47dfa5518fd11a49a621485159509.jpg"/>
             </div>
@@ -189,44 +188,55 @@
                                  <h3>DOTA2 2月9日更新日志：7.02游戏性</h3>
                                  <div class="d_contents">
                                  	<div class="d_item">
-                                    	<img src="http://img.dota2.com.cn/dota2/1e/05/1e05ed210380742885e3e63bb4e9c5d11487936607.jpg"/>                                    </div>
+                                    	<img src="http://img.dota2.com.cn/dota2/1e/05/1e05ed210380742885e3e63bb4e9c5d11487936607.jpg"/>                                    
+									</div>
                                     <div class="d_msg">
                                     	<p>2017基辅特级锦标赛马上就要来临，本次比赛仍会在全世界范围公开选拔喜爱DOTA2的玩家及战队。</p>
-                                        <span class="d_data">2017-02-09</span>                                    </div>
+                                        <span class="d_data">2017-02-09</span>                                   
+									</div>
                                  </div>
                             </a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>2017亚洲邀请赛非中国赛区分组对阵公布线</p>
-                                <span class="d_data ">2017-01-24</span>                            </a>
+                                <span class="d_data ">2017-01-24</span>                            
+							</a>
                              <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>2017亚洲邀请赛非中国赛区分组对阵公布</p>
-                                <span class="d_data">2017-01-24</span>                            </a>
+                                <span class="d_data">2017-01-24</span>                            
+							</a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon d_icon_dot"></i>
                             	<p>2017亚洲邀请赛非中国赛区分组对阵公布</p>
-                                <span class="d_data">2017-01-24</span>                            </a>
+                                <span class="d_data">2017-01-24</span>                            
+							</a>
                             <a class="d_list d_black" href="#">
                             	<i class="d_icon  d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>
                             <a class="d_list" href="#">
                             	<i class="d_icon  d_icon_dot"></i>
                             	<p>新春特别活动：按月来袭2017冬季珍藏I上线</p>
-                                <span class="d_data">2017-01-27</span>                            </a>                        </div>
+                                <span class="d_data">2017-01-27</span>                            
+							</a>                        
+						</div>
                     </div>
 					<div class="tab-pane fade d_tab" id="Dota1">
                     	<div class="d_lists">
@@ -591,7 +601,7 @@
 						<div class="col-sm-5 col-xs-5 poster-item">
 							<a href="#">
 								<img class="img-responsive" src="images/Duel.jpg">
-								   <span>Snipers Duel（狙击手决斗）</span>
+								   <span>Snipers Duel（决斗）</span>
 							  </a>
 							</div>
 							<div class="col-sm-5 col-xs-5 poster-item">
@@ -794,7 +804,7 @@
                </div>
             <div class="d_content">
             	<div class="input-group">
-                	<input type="text"  value="输入您的问题" class="form-control input-lg"><span class="input-group-addon btn btn-primary">搜索</span><a href="#" class="input-group-addon btn btn-default btn-lg active">我要提问</a>
+                	<input type="text"  placeholder="输入您的问题" class="form-control input-lg"><span class="input-group-addon btn btn-primary">搜索</span><a href="#" class="input-group-addon btn btn-default btn-lg active">我要提问</a>
                	</div>
                 <div class="tab-content">
                 <h4 class="">常见问题</h4>
@@ -878,13 +888,10 @@
     </div>
   </div> 
 </footer>  
-
     <script src="bootstrap/js/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
 	<script src="js/jquery-1.12.0.min.js"></script>
 	<script src="js/dota2.js"></script>
-
-
 </body>
 
 </html>
